# Blockchain_Archaeologist

./: README.md  VERSION.txt  app.py  build_wheelhouse.bat  install_offline.bat  install_windows.bat  pyproject.toml  requirements.txt  run.bat  run.sh
assets/: chain_profiles.json
assets/locales/: de.json  fr.json  ru.json
assets/themes/: aurora.json  dark.json  hellfire.json  light.json  matrix.json  ocean.json  purple.json  sepia.json
chain_archaeologist/: __init__.py  catalog.py  config.py  detection.py  extraction.py  i18n.py  main_window.py  node_manager.py  profiles.py  progress_panel.py  rpc.py  scanner.py  script_parser.py  themes.py  util.py
tests/: test_catalog.py  test_detection.py  test_script_parser.py
